# dprint-plugin-prettier

./: .dprintrc.json  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  deno.json  dprint.json  package-lock.json  package.json  rollup.config.js  tsconfig.json
.github/workflows/: check_updates.yml  ci.generate.ts  ci.yml  publish.yml  release.yml
base/: Cargo.toml
base/src/: build.rs  channel.rs  lib.rs  runtime.rs  snapshot.rs  util.rs
deno-plugin/: build.ts  main.ts
js/: deno.json  main.js  startup.test.ts
js/node/: .parcelrc  main.ts  package-lock.json  package.json  patch.mjs  tsconfig.json
js/node/scripts/: build.mjs
js/node/shims/: timers.js  url.js
js/node/src/: main.ts
plugin/: Cargo.toml  build.rs
plugin/src/: channel.rs  config.rs  formatter.rs  handler.rs  lib.rs  main.rs
plugin/tests/: tests.rs
plugin/tests/specs/: Config.txt  JavaScript.txt  JavaScript_JsDocPlugin.txt
plugin/tests/specs/override_config/: OverrideConfig.txt
scripts/: build.ts  createForTesting.ps1  createPluginFile.js  createPluginFile.ts  create_for_testing.ts  create_plugin_file.ts  local_test.ts  output_prettier_version.ts  update.ts  updateVersion.ts
src/: StdInOutReaderWriter.ts  channel.rs  common.ts  config.rs  format_text.rs  formatter.rs  handler.rs  index.ts  lib.rs  main.js  main.rs  main.ts  messageProcessor.ts  parentProcessChecker.ts  parseCliArgs.ts  runtime.rs  types.d.ts  utils.rs  version.ts  wasm_plugin.rs  worker.ts
src/messenger/: MessagePart.ts  StdIoMessenger.ts  StdIoReaderWriter.ts  index.ts
tests/: tests.rs
tests/specs/: Css.txt  JavaScript.txt  Svelte.txt  TypeScript.txt
tests/specs/override_config/: OverrideConfig2.txt
