[workspace]
resolver = "2"
members = [
  "base",
  "plugin",
]

[workspace.dependencies]
once_cell = "1.18"
deno_core = "0.299.0"
deno_console = "0.163.0"
deno_url = "0.163.0"
deno_webidl = "0.163.0"
dprint-core = "0.65.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
