[workspace]
resolver = "2"
members = [
  "base",
  "plugin",
]

[workspace.dependencies]
deno_console = "0.184.0"
deno_core = "0.326.0"
deno_url = "0.184.0"
deno_webidl = "0.184.0"
dprint-core = "0.67.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
zstd = "0.13.2"

# rusty-v8 needs at least -O1 to not miscompile
[profile.dev.package.v8]
opt-level = 1

[profile.release.package.deno_core]
opt-level = 3
[profile.release.package.deno_url]
opt-level = 3
[profile.release.package.deno_webidl]
opt-level = 3
[profile.release.package.serde]
opt-level = 3
[profile.release.package.serde_v8]
opt-level = 3
[profile.release.package.tokio]
opt-level = 3
[profile.release.package.url]
opt-level = 3
[profile.release.package.v8]
opt-level = 3
[profile.release.package.zstd]
opt-level = 3
[profile.release.package.zstd-sys]
opt-level = 3
