[package]
name = "dprint-plugin-deno-base"
version = "0.0.1"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2021"
homepage = "https://github.com/dprint/dprint-plugin-prettier"
keywords = ["formatting", "formatter", "typescript", "javascript"]
license = "MIT"
repository = "https://github.com/dprint/dprint-plugin-prettier"
description = "Base code for creating a formatting plugin for dprint with deno_core."

[features]
build = []

[dependencies]
async-channel = "1.9.0"
deno_core = "0.195.0"
dprint-core = { version = "0.62.1", features = ["process"] }
once_cell = "1.18"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sysinfo = { version = "0.29.4", default-features = false }
tokio = { version = "1", features = ["macros", "rt", "time"] }
tokio-util = { version = "0.7.8" }
zstd = "0.12.0"

[build-dependencies]
deno_core = { version = "0.195.0", features = ["include_js_files_for_snapshotting"] }
zstd = "0.12.0"

[dev-dependencies]
dprint-development = "0.9.3"
pretty_assertions = "1.4.0"
