[package]
name = "dprint-plugin-deno-base"
version = "0.0.2"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2021"
homepage = "https://github.com/dprint/dprint-plugin-prettier"
keywords = ["formatting", "formatter", "typescript", "javascript"]
license = "MIT"
repository = "https://github.com/dprint/dprint-plugin-prettier"
description = "Helper code for creating a formatting plugin for dprint with deno_core."

[features]
build = []

[dependencies]
async-channel = "1.9.0"
deno_core = { workspace = true }
dprint-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { version = "0.29.4", default-features = false }
tokio = { version = "1", features = ["macros", "rt", "time"] }
tokio-util = { version = "0.7.8" }
zstd = "0.12.0"

[dev-dependencies]
dprint-development = "0.9.3"
pretty_assertions = "1.4.0"
