[package]
name = "dprint-plugin-deno-base"
version = "0.1.0"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2021"
homepage = "https://github.com/dprint/dprint-plugin-prettier"
keywords = ["formatting", "formatter", "typescript", "javascript"]
license = "MIT"
repository = "https://github.com/dprint/dprint-plugin-prettier"
description = "Helper code for creating a formatting plugin for dprint with deno_core."

[features]
build = []

[dependencies]
async-channel = "2.3.1"
deno_core = { workspace = true }
dprint-core = { workspace = true, features = ["process"] }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
tokio = { version = "1", features = ["macros", "rt", "time"] }
tokio-util = { version = "0.7.13" }
zstd.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.0"
